--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             setCanvasSize();
             const level = parseInt(document.getElementById('level').value);
             cellSize = Math.floor(canvas.width / (level * 10));
-            cellSize = cellSize - cellSize % 10;
+            if(cellSize > 10) {
+                cellSize = cellSize - cellSize % 10;
+            }
             cols = Math.floor(canvas.width / cellSize);
             rows = cols;
 
