--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         }
 
         function setCanvasSize() {
-            const size = Math.min(window.innerWidth, window.innerHeight) * 0.95;
+            let size = Math.min(window.innerWidth, window.innerHeight) * 0.95;
+            if(size > 10) {
+                size = size - size % 10;
+            }
             canvas.width = size;
             canvas.height = size;
         }
@@ -59,10 +62,8 @@
             const interval = setInterval(step, 50); 
             setCanvasSize();
             const level = parseInt(document.getElementById('level').value);
-            cellSize = Math.floor(canvas.width / (level * 10));
-            if(cellSize > 10) {
-                cellSize = cellSize - cellSize % 10;
-            }
+            cellSize = Math.floor(canvas.width / (level * 5));
+
             cols = Math.floor(canvas.width / cellSize);
             rows = cols;
 
